# mzTab-M

./: .gitignore  README.md  antora-playbook.yml  build-site.sh  compare_adoc_specs.py  gen-docs.sh  mzTab_m_schema.adoc  package-lock.json  package.json  validate.sh
docs/: index.md
examples/: LDA_v2.11.1_MTBLS3563.mzTab  LDA_v2.11.1_MTBLS396.mzTab  README.md  example_study_variable_group.mztab  manual_null_MTD-only.mztab  manual_null_null_lipidomics_v2.1.mztab  manual_null_null_minimal_example.mztab  msdial5GUI_Area_zenodo14263441.mztab  msdial5GUI_Height_zenodo14263441.mztab  msdial5console_zenodo14263441.mztab  mzmine_3.x_-testing.mztab  openms_2.4.0-manualFixes_04-PestMixes.mztab  progenesis_2.4.6505.48857_MTBLS263.mztab.json  rikenlipidomics2mztabm_1.0_1_Mouse_Adrenal_gland_1.mztab  rikenlipidomics2mztabm_1.0_2_Mouse_Brain_1.mztab  xcms_output_example.mztab
schema/: generate_schema_adoc.py  mzTab_2_0-M.json  mzTab_2_0-M_openapi_3_1.json  mzTab_2_0-M_summary-mapping-termroots.html  mzTab_2_0-M_summary-mapping.xml  mzTab_2_1-M.json  mzTab_2_1-M_mapping.xml  mzTab_2_1-M_metabolights_mapping.xml  mzTab_2_1-M_openapi.json  mzTab_2_1-M_openapi.yml  mzTab_m_openapi.yml  mztabm-schema-comparison-report.md  mztabm.schema-2.1.0-M.json  openapi-integration-plan.md  openapi_to_jsonschema.py  validation-profiles-openapi-todos.md
skills/rikenlipidomics2mztabm/: SKILL.md  pyproject.toml
skills/rikenlipidomics2mztabm/evals/: evals.json
skills/rikenlipidomics2mztabm/scripts/: example_metadata.json  tsv_to_mztabm.py
specification_documents/: README.adoc  mzTab_m_schema.adoc  (+5 more)
(+45 files in other folders)
